triton-example.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tritonserver2
  namespace: default
  uid: cfe44f2f-ebf3-4d79-a11d-731bd10bffb1
  resourceVersion: '16654161'
  generation: 1
  creationTimestamp: '2024-03-22T13:02:37Z'
  labels:
    app: tritonserver
  annotations:
    deployment.kubernetes.io/revision: '1'
  managedFields:
    - manager: dashboard
      operation: Update
      apiVersion: apps/v1
      time: '2024-03-22T13:02:37Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
            f:spec:
              f:containers:
                k:{"name":"tritonserver"}:
                  .: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources:
                    .: {}
                    f:limits:
                      .: {}
                      f:nvidia.com/gpu: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-28T19:34:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      subresource: status
spec:
  replicas: 4
  selector:
    matchLabels:
      app: tritonserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tritonserver
    spec:
      containers:
        - name: tritonserver
          image: nginx:latest
          resources:
            limits:
              nvidia.com/gpu: '1'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 1
  replicas: 4
  updatedReplicas: 4
  readyReplicas: 4
  availableReplicas: 4
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-03-22T13:02:56Z'
      lastTransitionTime: '2024-03-22T13:02:37Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "tritonserver2-6b866dfbdc" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-04-28T19:34:37Z'
      lastTransitionTime: '2024-04-28T19:34:37Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
